# PlotPilot

./: .gitignore
.github/: pull_request_template.md
.github/workflows/: build-macos.yml
application/: paths.py
application/engine/services/: autopilot_daemon.py  context_budget_allocator.py
application/workflows/: auto_novel_generation_workflow.py
domain/ai/services/: llm_service.py
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: bible.ts  workflow.ts
frontend/src/components/onboarding/: NovelSetupGuide.vue
frontend/src/components/workbench/: ChapterElementPanel.vue  ForeshadowChapterSuggestionsPanel.vue  LLMControlPanel.vue
infrastructure/ai/: openai_embedding_service.py  prompt_manager.py
infrastructure/ai/providers/: anthropic_provider.py  gemini_provider.py  openai_provider.py
infrastructure/persistence/database/: connection.py
interfaces/api/: dependencies.py
interfaces/api/v1/audit/: macro_refactor.py
scripts/: start_mac.sh
tests/unit/infrastructure/ai/providers/: test_openai_provider.py
web-app/: package-lock.json  package.json
web-app/src/components/: CastGraphCompact.vue
web-app/src/components/graphs/: CastGraphCompact.vue  LocationGraphCompact.vue
web-app/src/components/workbench/: PlotArcPanel.vue  StorylinePanel.vue
web-app/src/views/: Chapter.vue
