[package]
name = "plotpilot"
version = "1.0.1"
description = "PlotPilot · 墨枢 - AI驱动的长篇创意写作平台"
authors = ["PlotPilot Team"]
license = "MIT"
repository = "https://github.com/your-repo/PlotPilot"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plotpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
dirs = "5"
